[gd_scene load_steps=2 format=3 uid="uid://lppt7oqct3o1"]

[ext_resource type="Script" path="res://ProjectInterface/StartInfo/Media/mediaVersion.gd" id="1_id1g0"]

[node name="mediaVersion" type="GraphNode"]
offset_right = 174.0
offset_bottom = 113.0
title = "Media Version"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_id1g0")

[node name="IdInfo" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Id" type="VBoxContainer" parent="IdInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IdLabel" type="Label" parent="IdInfo/Id"]
layout_mode = 2
text = "ID"

[node name="IdEdit" type="LineEdit" parent="IdInfo/Id"]
layout_mode = 2

[node name="Locale" type="VBoxContainer" parent="IdInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LocaleLabel" type="Label" parent="IdInfo/Locale"]
layout_mode = 2
text = "Locale"

[node name="LocaleEdit" type="LineEdit" parent="IdInfo/Locale"]
layout_mode = 2

[node name="DictLabel" type="Label" parent="."]
layout_mode = 2
text = "Dict
"

[node name="DictEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
scroll_fit_content_height = true

[node name="FileInfo" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Tags" type="VBoxContainer" parent="FileInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TagLabel" type="Label" parent="FileInfo/Tags"]
layout_mode = 2
text = "Tags"

[node name="TagEdit" type="LineEdit" parent="FileInfo/Tags"]
layout_mode = 2

[node name="Type" type="VBoxContainer" parent="FileInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeLabel" type="Label" parent="FileInfo/Type"]
layout_mode = 2
text = "Type"

[node name="TypeEdit" type="LineEdit" parent="FileInfo/Type"]
layout_mode = 2

[connection signal="text_changed" from="DictEdit" to="." method="_on_text_edit_text_changed"]
